--- a/style.css
+++ b/style.css
@@ -30,16 +30,35 @@ body{
 }
 
 header{
-    padding-left: calc(50% - 1072px / 2);
-    padding-right: calc(50% - 1072px / 2);
     width: 100%;
     height: 6rem;
     background-color: white;
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid;
     z-index: 2;
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid black;
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 75%;
+    height: 100%;
+}
+
+.nav {
+    position: relative;
+    display: inline-block;
+    height: 90%;
+    border-right: 2px solid black;
+    padding: 10px 20px;
+    transition: .25s ease;
+}
+
+.nav:hover{
+    background-color: #dddddd;
 }
 
 footer{
@@ -76,13 +95,75 @@ header .nav-group{
     display: flex;
     position: relative;
     height: 100%;
-    width: 12.5rem;
     justify-content: center;
-    transition: .25s;
+    align-items: center;
 }
 
-header .nav-group:hover{
+.dropdown {
+    position: relative;
+    display: inline-block;
+    height: 90%;
+    border-right: 2px solid black;
+    transition: .25s ease;
+}
+
+.dropdown:hover{
     background-color: #dddddd;
+}
+
+.dropbtn {
+    background: transparent;
+    height: 100%;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.flag-icon {
+    width: 50px;
+    height: auto;
+    vertical-align: middle;
+}
+
+.dropdown-content {
+    max-height: 0;
+    overflow: hidden;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    top: 100%;
+    left: 0;
+    transition: max-height 0.5s ease;
+}
+
+.dropdown-content a:nth-child(odd) {
+    background-color: #f2f2f2; /* Light grey for odd links */
+}
+
+.dropdown-content a:nth-child(even) {
+    background-color: #ffffff; /* White for even links */
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #bdbdbd;
+}
+
+.dropdown-content.show {
+    max-height: 500px; /* Adjust as needed for the height of your dropdown content */
 }
 
 header .nav-group a{
@@ -95,6 +176,7 @@ header .nav-group a{
     flex-direction: column;
     text-decoration: none;
     color: black;
+    transition: .25s;
 }
 
 header .info-text{
@@ -104,7 +186,9 @@ header .info-text{
     justify-content: center;
 }
 
-header .info-text h1{
+header .info-text a{
+    text-decoration: none;
+    color: black;
     font-size: 2rem;
     font-weight: 500;
     font-family: 'Ubuntu';
@@ -145,17 +229,32 @@ header .info-text .scroll::before{
     animation: pulse 3s infinite;
 }
 
-@keyframes pulse {
-    0%, 100%{
-        opacity: 0;
-    }
-    15%, 45%{
-        opacity: 1;
-    }
-    60%{
-        box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.1);
-        opacity: 0;
-    }
+.information{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 80vh;
+    background-color: white;
+}
+
+.information-middle{
+    width: 70%;
+    height: 70%;
+}
+
+.information-middle h1{
+    font-size:3rem;
+    padding: 15px;
+}
+
+.information-middle h2{
+    font-size: 1.5rem;
+    padding: 10px;
+}
+
+.information-middle p{
+    font-size: 1rem;
 }
 
 .lists{
@@ -175,7 +274,6 @@ header .info-text .scroll::before{
     border-top: 0px;
     transition: .25s;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    z-index: 2;
 }
 
 .lists div:hover{
@@ -195,7 +293,6 @@ header .info-text .scroll::before{
 }
 
 #about, #features{
-    padding: 40px;
     display: flex;
     justify-content: center;
 }
@@ -280,17 +377,17 @@ header .info-text .scroll::before{
 }
 
 #about .card .info h1, #features .card .info h1{
-    margin-bottom: 20px;
     color: #000000;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: bold;
     font-family: 'Ubuntu';
 }
 
 #about .card .info p, #features .card .info p{
-    text-align: center;
+    font-weight: bold;
+    text-align: left;
     color: #818181;
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 1.8rem;
 }
 
@@ -325,8 +422,8 @@ header .info-text .scroll::before{
 }
 
 .thumbnail {
-    width: 250px;
-    height: 135px;
+    width: 178px;
+    height: 100px;
     object-fit: cover;
     transition: .25s;
     border: dashed 2px grey;
@@ -352,19 +449,10 @@ header .info-text .scroll::before{
     text-align: left;
 }
 
-.listmods {
-    top: 40px;
-    position: relative;
-    width: 20rem;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#features .feature-cards .card .info p{
-    font-size: 1.1rem;
-    font-weight: bold;
-    text-align: left;
+.flag {
+    width: 35px;
+    height: auto;
+    vertical-align: middle;
 }
 
 #features .feature-cards .card .info a{
@@ -391,7 +479,7 @@ header .info-text .scroll::before{
     width: 100%;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
     header .info-text h1{
         font-size: 2rem;
     }
@@ -407,6 +495,14 @@ header .info-text .scroll::before{
 
     .info {
         display: none;
+    }
+
+    header .info-text a{
+        font-size: 1.5rem;
+    }
+
+    .nav-group h3{
+        font-size: .8rem;
     }
 
     .img {
