--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ footer{
     padding-left: calc(50% - 1072px / 2);
     padding-right: calc(50% - 1072px / 2);
     width: 100%;
-    height: 10rem;
+    height: 9rem;
     backdrop-filter: blur(5px);
     display: flex;
     flex-direction: column;
@@ -144,11 +144,11 @@ header .nav-group{
 }
 
 .dropdown-content a:nth-child(odd) {
-    background-color: #f2f2f2; /* Light grey for odd links */
+    background-color: #f2f2f2;
 }
 
 .dropdown-content a:nth-child(even) {
-    background-color: #ffffff; /* White for even links */
+    background-color: #ffffff;
 }
 
 .dropdown-content a {
@@ -163,7 +163,7 @@ header .nav-group{
 }
 
 .dropdown-content.show {
-    max-height: 500px; /* Adjust as needed for the height of your dropdown content */
+    max-height: 500px;
 }
 
 header .nav-group a{
