--- a/style.css
+++ b/style.css
@@ -72,13 +72,13 @@ footer{
     padding-right: calc(50% - 1072px / 2);
     width: 100%;
     height: 9rem;
-    backdrop-filter: blur(5px);
+    background-color: #1e1f20;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-top: 1px solid;
     z-index: 2;
+    color: #e3e3e3;
 }
 
 footer p{
