--- a/style.css
+++ b/style.css
@@ -263,51 +263,6 @@ header .info-text .scroll::before{
     animation: pulse 3s infinite;
 }
 
-.information{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 80vh;
-    background-color: white;
-}
-
-.information-middle{
-    width: 70%;
-    height: 70%;
-}
-
-.fade-text {
-    font-size: 2em;
-    font-weight: bold;
-    overflow: hidden;
-    white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    color: transparent;
-}
-
-.fade-text::after {
-    content: attr(data-text);
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    color: black;
-    animation: fadeFromLeft 2s forwards;
-}
-
-@keyframes fadeFromLeft {
-    0% {
-        clip-path: inset(0 100% 0 0);
-    }
-    100% {
-        clip-path: inset(0 0 0 0);
-    }
-}
-
-
 .lists{
     margin-top: 4rem;
     display: flex;
@@ -556,6 +511,62 @@ header .info-text .scroll::before{
 
 #features .feature-cards .card .info h1{
     text-align: left;
+}
+
+.information {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #131314;
+    text-align: center;
+    height: 40vh;
+    color: #e3e3e3;
+}
+
+.information h1{
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
+
+.information h2{
+    margin-bottom: 1rem;
+}
+
+.top-1{
+    padding: 75px;
+    background-color: #131314;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #e3e3e3;
+}
+
+.crown-top-1{
+    width: 75px;
+    height: auto;
+    vertical-align: middle;
+}
+
+.contact-me{
+    text-align: center;
+    color: #e3e3e3;
+    background-color: #131314;
+}
+
+.contact-me h2{
+    font-size: 2rem;
+}
+
+.icons{
+    width: 100px;
+    height: auto;
+    vertical-align: middle;
+    transition: .25s ease;
+}
+
+.icons:hover{
+    filter: brightness(50%);
 }
 
 .flag {
