--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     background-size: cover;
     background-repeat: repeat-y;
     pointer-events: none;
-    z-index: 0;
+    z-index: 1;
 }
 
 header {
@@ -354,6 +354,14 @@ header .info-text .scroll::before {
     justify-content: center;
 }
 
+#particles{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -367,6 +375,101 @@ header .info-text .scroll::before {
     display: flex;
     align-items: center;
     justify-content: left;
+}
+
+.scroll {
+    color: #fff;
+    top: 75px;
+    transform: translate(0, -50%);
+    transition: all 0.5s;
+    position: relative;
+}
+
+.scroll:hover{
+    opacity: 0.7;
+}
+
+.scroll::before{
+    position: absolute;
+    top: -16px;
+    left: -16px;
+    z-index: -1;
+    content: '';
+    width: 44px;
+    height: 44px;
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.1);
+    border-radius: 100%;
+    animation: pulse 3s infinite;
+}
+
+@keyframes pulse {
+    0%, 100%{
+        opacity: 0;
+    }
+    15%, 45%{
+        opacity: 1;
+    }
+    60%{
+        box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.1);
+        opacity: 0;
+    }
+}
+
+.submit-obby{
+    background-color: #131314;
+    display: flex;
+    justify-content: center;
+}
+
+.form-container {
+    color: #e3e3e3;
+    margin: 4rem;
+    background-color: #2c2d2e;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.form-container h2 {
+    text-align: center;
+}
+
+.form-container form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container label {
+    margin-top: 10px;
+}
+
+.form-container input[type="text"],
+.form-container input[type="url"],
+.form-container textarea {
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-container textarea {
+    resize: vertical;
+}
+
+.form-container button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.form-container button[type="submit"]:hover {
+    background-color: #45a049;
 }
 
 .title h1 {
